<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="wrap_content" >

    <LinearLayout
        android:id="@+id/linearlayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical" >

        <TextView
            android:id="@+id/textView11"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/set_primary_work"
            android:textAppearance="?android:attr/textAppearanceLarge" />

        <CheckBox
            android:id="@+id/checkBoxPrimaryWork"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:checked="true"
            android:enabled="false"
            android:text="@string/choose_the_primary_work" />

        <LinearLayout
            android:id="@+id/primarySettingsLayout"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical" >

            <Spinner
                android:id="@+id/primaryWorkSpinner"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content" />

            <CheckBox
                android:id="@+id/checkboxPrimaryTts"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:checked="false"
                android:text="@string/enable_tts_for_primary_work" />

            <LinearLayout
                android:id="@+id/primaryTtsSettingsLayout"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:visibility="gone" >

                <LinearLayout
                    android:id="@+id/primaryTtsSelectionLayout"
                    android:layout_width="fill_parent"
                    android:layout_height="wrap_content" >

                    <TextView
                        android:id="@+id/textHintPrimaryTtsSelection"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:text="@string/choose_tts" />

                    <Spinner
                        android:id="@+id/primaryTtsSpinner"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_weight="2" />
                </LinearLayout>

                <LinearLayout
                    android:id="@+id/primaryTtsRateLayout"
                    android:layout_width="fill_parent"
                    android:layout_height="wrap_content" >

                    <TextView
                        android:id="@+id/textHintPrimaryTtsRate"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/set_rate" />

                    <SeekBar
                        android:id="@+id/seekBarPrimaryTtsRate"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_weight="5"
                        android:max="6"
                        android:progress="3"
                        android:secondaryProgress="3" />

                    <TextView
                        android:id="@+id/textPrimaryRate"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="" />
                </LinearLayout>

                <LinearLayout
                    android:id="@+id/primaryTtsPitchLayout"
                    android:layout_width="fill_parent"
                    android:layout_height="wrap_content" >

                    <TextView
                        android:id="@+id/textHintPrimaryPitch"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/set_pitch" />

                    <SeekBar
                        android:id="@+id/seekBarPrimaryTtsPitch"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_weight="5"
                        android:max="6"
                        android:progress="3"
                        android:secondaryProgress="3" />

                    <TextView
                        android:id="@+id/textPrimaryPitch"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="" />
                </LinearLayout>
            </LinearLayout>
        </LinearLayout>

        <TextView
            android:id="@+id/TextView01"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="15sp"
            android:text="@string/set_secondar_work"
            android:textAppearance="?android:attr/textAppearanceLarge" />

        <CheckBox
            android:id="@+id/checkBoxSecondWork"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:checked="false"
            android:text="@string/choose_the_secondary_work" />

        <LinearLayout
            android:id="@+id/secondarySettings"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:visibility="gone" >

            <Spinner
                android:id="@+id/secondaryWorkSpinner"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content" />

            <CheckBox
                android:id="@+id/checkboxSecondTts"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:checked="false"
                android:text="@string/enable_tts_for_secondary_work" />

            <LinearLayout
                android:id="@+id/secondaryTtsSettingsLayout"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:visibility="gone" >

                <LinearLayout
                    android:id="@+id/secondaryTtsSelectionLayout"
                    android:layout_width="fill_parent"
                    android:layout_height="wrap_content" >

                    <TextView
                        android:id="@+id/textHintSecondaryTts"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:text="@string/choose_tts" />

                    <Spinner
                        android:id="@+id/secondaryTtsSpinner"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_weight="2" />
                </LinearLayout>

                <LinearLayout
                    android:id="@+id/secondaryTtsRateLayout"
                    android:layout_width="fill_parent"
                    android:layout_height="wrap_content" >

                    <TextView
                        android:id="@+id/textHintSecondaryTtsRate"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/set_rate" />

                    <SeekBar
                        android:id="@+id/seekBarSecondaryTtsRate"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_weight="5"
                        android:max="6"
                        android:progress="3"
                        android:secondaryProgress="3" />

                    <TextView
                        android:id="@+id/textSecondaryRate"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="" />
                </LinearLayout>

                <LinearLayout
                    android:id="@+id/secondaryTtsPitchLayout"
                    android:layout_width="fill_parent"
                    android:layout_height="wrap_content" >

                    <TextView
                        android:id="@+id/textHintSecondaryTtsPitch"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/set_pitch" />

                    <SeekBar
                        android:id="@+id/seekBarSecondaryPitch"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_weight="5"
                        android:max="6"
                        android:progress="3"
                        android:secondaryProgress="3" />

                    <TextView
                        android:id="@+id/textSecondaryPitch"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="" />
                </LinearLayout>
            </LinearLayout>
        </LinearLayout>

        <LinearLayout
            android:id="@+id/speakModeLayout"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content" >

            <TextView
                android:id="@+id/speakModeHint"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/choose_speak_mode" />

            <Spinner
                android:id="@+id/speakModeSpinner"
                android:layout_width="0dip"
                android:layout_height="wrap_content"
                android:layout_weight="3" />
        </LinearLayout>
        
        <LinearLayout
            android:id="@+id/confirmCancelLayout"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content" >

            <Button
                android:id="@+id/buttonConfirm"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/confirm" />

            <Button
                android:id="@+id/buttonCancel"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/cancel" />
        </LinearLayout>

    </LinearLayout>

</ScrollView>